# waifu-scorer

./: README.md  pyproject.toml
src/waifu_scorer/: __init__.py  __main__.py  const.py  mlp.py  predict.py
